# Academic-Coding-Projects

./: README.md
C-WorkShop/HW1/code/: HW1Q1.c  HW1Q2.c
C-WorkShop/HW3/code/: CMakeLists.txt
Computer_Arch_&_OS/HW2/: HW2_Q1.c
Computer_Arch_&_OS/HW4/: HW4.patch
Computer_Architecture_&_Operating_Sys/HW5/: HW5.patch
Data_Structures_and_Algorithms/Dynamic_Graph/Dynamic_Graph_Implementation/: DynamicGraph.java  GraphEdge.java  GraphNode.java
Data_Structures_and_Algorithms/wetHW/DynamicGraph/: Queue.java  RootedTree.java
Database_management/HW1/: Queries.py  create_table_commands_PartB.sql
Database_management/HW1/data/: Follows_test1.csv  GT_Q2_test1.csv  GT_Q3_test1.csv  GT_Q4_test1.csv  Interactions_test1.csv  Users_test1.csv
Database_management/project/partA/: Createing_Tables_Q2.sql  Queries.py  Views.py
Database_management/project/partB/: README.md
Electronic_Commerce_Models/HW1/HW1_code/: Praducci_simulation.py  calc_optimal_influencers.py  optimal_influencers.csv
Electronic_Commerce_Models/HW2/part1/: RecommendsionSystem.py  task1_watch_time_assessment.csv  task2_watch_time_assessment.csv
Electronic_Commerce_Models/HW2/part2/: Recommender.py
Electronic_Commerce_Models/HW3/part1/: PriceSetter1.py  PriceSetter2.py  (+1 more)
Introduction_to_Data_Analysis/HW2/: HW2_code_answers.ipynb  aviation_accident_data.csv
Introduction_to_Data_Analysis/HW3/: HW3_code_answers.ipynb
Introduction_to_Data_Analysis/final_project/: final_project_code_answers.ipynb
Machine_Learning_1/HW1/: HW1_code_answers.py
Machine_Learning_1/HW2/: HW2_code_answers.py
(+122 files in other folders)
